--- a/index.html
+++ b/index.html
@@ -10,20 +10,37 @@
 <body>
   <div class="hamburger-nav-container">
     <div class="hamburger-nav" id="hamburger-nav">
-      <div class="tab">
+      <a href="#" class="tab active" data-target="tab-content-1">
         Click me
-      </div>
-      <div class="tab">
+      </a>
+      <a href="#" class="tab" data-target="tab-content-2">
         Click me
-      </div>
-      <div class="tab">
+      </a>
+      <a href="#" class="tab" data-target="tab-content-3">
         Click me
-      </div>
-      <div class="tab">
+      </a>
+      <a href="#" class="tab" data-target="tab-content-4">
         Click me
-      </div>
+      </a>
     </div>
     <i class="fas fa-bars" id="hamburger"></i>
+  </div>
+  <div class="tab-content-container">
+    <div class="tab-content" id="tab-content-1">
+      <img src="https://media.giphy.com/media/Vur3LPcCBhYze/giphy.gif" alt="">
+    </div>
+    <div class="tab-content hidden" id="tab-content-2">
+      <img src="https://media.giphy.com/media/Rkis28kMJd1aE/giphy.gif" alt="">
+
+    </div>
+    <div class="tab-content hidden" id="tab-content-3">
+      <img src="https://media.giphy.com/media/5r5J4JD9miis/giphy.gif" alt="">
+
+    </div>
+    <div class="tab-content hidden" id="tab-content-4">
+      <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="">
+
+    </div>
   </div>
   <script src="all.js"></script>
 </body>
