add slick style

--- a/index.html
+++ b/index.html
@@ -8,34 +8,56 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="header-container-lg">
+    <h1>
+      Awesome responsive tabs
+    </h1>
+  </div>
   <div class="hamburger-nav-container">
+    <div class="header-container-xs">
+      <h1>
+        Awesome responsive tabs
+      </h1>
+    </div>
     <div class="hamburger-nav" id="hamburger-nav">
       <a href="#" class="tab active" data-target="tab-content-1">
-        Click me
+        First Giphy
       </a>
       <a href="#" class="tab" data-target="tab-content-2">
-        Click me
+        Second Giphy
       </a>
       <a href="#" class="tab" data-target="tab-content-3">
-        Click me
+        Third Giphy
       </a>
       <a href="#" class="tab" data-target="tab-content-4">
-        Click me
+        Fourth Giphy
       </a>
     </div>
     <i class="fas fa-bars" id="hamburger"></i>
   </div>
   <div class="tab-content-container">
     <div class="tab-content" id="tab-content-1">
+      <h2>
+        First Giphy
+      </h2>
       <img src="https://media.giphy.com/media/Vur3LPcCBhYze/giphy.gif" alt="">
     </div>
     <div class="tab-content hidden" id="tab-content-2">
+      <h2>
+        Second Giphy
+      </h2>
       <img src="https://media.giphy.com/media/Rkis28kMJd1aE/giphy.gif" alt="">
     </div>
     <div class="tab-content hidden" id="tab-content-3">
+      <h2>
+        Third Giphy
+      </h2>
       <img src="https://media.giphy.com/media/5r5J4JD9miis/giphy.gif" alt="">
     </div>
     <div class="tab-content hidden" id="tab-content-4">
+      <h2>
+        Fourth Giphy
+      </h2>
       <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="">
     </div>
   </div>
