--- a/index.html
+++ b/index.html
@@ -8,57 +8,59 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="header-container-lg">
-    <h1>
-      Awesome responsive tabs
-    </h1>
-  </div>
-  <div class="hamburger-nav-container">
-    <div class="header-container-xs">
+  <div class="container-main">
+    <div class="header-container-lg">
       <h1>
         Awesome responsive tabs
       </h1>
     </div>
-    <div class="hamburger-nav" id="hamburger-nav">
-      <a href="#" class="tab active" data-target="tab-content-1">
-        First Giphy
-      </a>
-      <a href="#" class="tab" data-target="tab-content-2">
-        Second Giphy
-      </a>
-      <a href="#" class="tab" data-target="tab-content-3">
-        Third Giphy
-      </a>
-      <a href="#" class="tab" data-target="tab-content-4">
-        Fourth Giphy
-      </a>
+    <div class="hamburger-nav-container">
+      <div class="header-container-xs">
+        <h1>
+          Awesome responsive tabs
+        </h1>
+      </div>
+      <div class="hamburger-nav" id="hamburger-nav">
+        <a href="#" class="tab active" data-target="tab-content-1">
+          First Giphy
+        </a>
+        <a href="#" class="tab" data-target="tab-content-2">
+          Second Giphy
+        </a>
+        <a href="#" class="tab" data-target="tab-content-3">
+          Third Giphy
+        </a>
+        <a href="#" class="tab" data-target="tab-content-4">
+          Fourth Giphy
+        </a>
+      </div>
+      <i class="fas fa-bars" id="hamburger"></i>
     </div>
-    <i class="fas fa-bars" id="hamburger"></i>
-  </div>
-  <div class="tab-content-container">
-    <div class="tab-content" id="tab-content-1">
-      <h2>
-        First Giphy
-      </h2>
-      <img src="https://media.giphy.com/media/Vur3LPcCBhYze/giphy.gif" alt="">
-    </div>
-    <div class="tab-content hidden" id="tab-content-2">
-      <h2>
-        Second Giphy
-      </h2>
-      <img src="https://media.giphy.com/media/Rkis28kMJd1aE/giphy.gif" alt="">
-    </div>
-    <div class="tab-content hidden" id="tab-content-3">
-      <h2>
-        Third Giphy
-      </h2>
-      <img src="https://media.giphy.com/media/5r5J4JD9miis/giphy.gif" alt="">
-    </div>
-    <div class="tab-content hidden" id="tab-content-4">
-      <h2>
-        Fourth Giphy
-      </h2>
-      <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="">
+    <div class="tab-content-container">
+      <div class="tab-content" id="tab-content-1">
+        <h2>
+          First Giphy
+        </h2>
+        <img src="https://placehold.it/600/600" alt="">
+      </div>
+      <div class="tab-content hidden" id="tab-content-2">
+        <h2>
+          Second Giphy
+        </h2>
+        <img src="https://placehold.it/600/600" alt="">
+      </div>
+      <div class="tab-content hidden" id="tab-content-3">
+        <h2>
+          Third Giphy
+        </h2>
+        <img src="https://placehold.it/600/600" alt="">
+      </div>
+      <div class="tab-content hidden" id="tab-content-4">
+        <h2>
+          Fourth Giphy
+        </h2>
+        <img src="https://placehold.it/600/600" alt="">
+      </div>
     </div>
   </div>
   <script src="all.js"></script>
